1998-07-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* analysis.h (ActiveGraph, ActiveOutFile, FunctionGraph):  Add 
	protocols and class objects.

	* ActiveGraph.[hm]: Moved from simtoolsgui.

	* ActiveOutFile.[hm]: Moved from simtools.

	* FunctionGraph.[hm]: New files.

	* Makefile.am (SRC, analysis_HEADERS): Add ActiveGraph, ActiveOutFile,
	and FunctionGraph.

1998-06-24  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (lib_LIBRARIES, libanalysis_a_SOURCES): Remove.

1998-06-23  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (lib_LTLIBRARIES, libanalysis_la_SOURCES,
	libanalysis_la_LDFLAGS, SRC, CURRENT, REVISION, AGE): New
	variables.  Set *_SOURCES from SRC.

1998-06-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile: Remove.
	
1998-06-21  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am: New file.

1998-06-03  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* analysis.h: Updated documentation tags.

1998-05-06  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* analysis.h (Averager, Entropy, EZBin, EZDistribution, EZGraph):
	(EZBin): Declare +createBegin:.
	(Entropy, EZDistribution): Declare -createEnd.
	(EZBin, EZGraph): -setGraphs and -setFileOutput take a BOOL, not int as
	an argument.  Reorder for phase tags.
	
	* EZBin.[hm], EZGraph.[hm]: Make graphics and fileOutput BOOL
	instead of int.  Likewise for accessors.  Reorder for phase tags.

	* Averager.m, EZBin.m, EZDistribution.m, Entropy.m: Add phase tags. 

1998-04-25  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* EZDistribution.m ([EZDistribution -drop]): Use xfree instead of free.

1998-04-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* analysis.h: Remove includes of analysis things.  Replace
	with protocols for Averager, EZBin, EZDistribution, EZGraph,
	and Entropy.  Add a @class for each.

	* Averager.m, EZBin.m, EZDistribution.m, EZGraph.m, Entropy.m:
	Move documentation tags to analysis.h.

1998-04-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
