@@ -1,5 +1,7 @@
 1998-07-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
+	* EZGraph.m: Include analysis.h.  Don't include simtoolsgui.h.
+
 	* analysis.h (ActiveGraph, ActiveOutFile, FunctionGraph):  Add 
 	protocols and class objects.
 
